// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render the component with different props 1`] = `
<HeadingStyled
  as="h1"
  bold={false}
  noMargin={true}
>
  Almighty Corinthians!
</HeadingStyled>
`;

exports[`<Heading /> should render the component with the default props 1`] = `
<HeadingStyled
  as="h3"
  bold={false}
  noMargin={false}
>
  Almighty Corinthians!
</HeadingStyled>
`;
